make sure the status is not wrapped

--- a/docs/src/style.css
+++ b/docs/src/style.css
@@ -111,6 +111,7 @@ select {
 }
 #imagescene-status {
     cursor: help;
+    white-space: nowrap;
 }
 #imagescene-info {
     padding: 10px;
